replace twitter with mastodon

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  marenwestermann
-twitter_username: MarenWestermann
+mastodon:
+- username: maren
+  instance: fosstodon.org
 
 # Build settings
 markdown: kramdown
